--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,13 @@ section{
 .header__nav_list_item_link{
     padding-top: 8px;
     padding-bottom: 8px;
+    color: rgba(0,0,0,.5);
+    transition: all 0.5s ease-in-out;
+}
+
+.header__nav_list_item_link:hover{
+    color: rgba(0,0,0,.7);
+    background: blue;
 }
 
 .header__join{
@@ -159,6 +166,7 @@ section{
     font-weight: bold;
     text-align: center;
     margin-bottom: 10px;
+    white-space: pre-line;
 }
 
 .courses__list_item_info{
